# statux

./: Cargo.toml  LICENSE  README.md
src/: context.rs  executer.rs  executor.rs  main.rs  schedule.rs
src/component/: battery.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  playing.rs  time.rs  volume.rs
