[package]
name = "statux"
version = "0.1.0"
edition = "2024"

[dependencies]
alsa = "0.9.1"
anyhow = "1.0.98"
battery = "0.7.8"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
mpris = "2.0.1"
nix = { version = "0.30.1", default-features = false, features = ["fs"] }
tokio = { version = "1.45.0", default-features = false, features = ["fs", "io-util", "macros", "process", "rt", "signal", "sync", "time"] }
x11rb = "0.13.1"
